# license-manager

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  .~lock.Biscuits_19_2015.csv#  .~lock.aro_details.csv#  0310713518_consent_letter.docx  0310713518_request_letter.docx  0310721821_consent_letter.docx  0310721821_request_letter.docx  0310729706_consent_letter.docx  0310729706_request_letter.docx  0310729712_consent_letter.docx  0310729712_request_letter.docx  0310821169_consent_letter.docx  0310821169_request_letter.docx  0310824205_consent_letter.docx  0310824205_request_letter.docx  0310825085_consent_letter.docx  0310825085_request_letter.docx  0310826413_consent_letter.docx  0310826413_request_letter.docx  0310832269_Tri-party agreement.docx  0310832494_Tri-party agreement.docx  0310832594_TL.docx  0310832594_consent_letter.docx  0310832594_request_letter.docx  0310832769_Tri-party agreement.docx  0310832985_Tri-party agreement.docx  0310833047_TL.docx  0310833047_consent_letter.docx  0310833047_request_letter.docx  0310833141_TL.docx  0310833141_consent_letter.docx  0310833141_request_letter.docx  0310833589_Tri-party agreement.docx  0310833591_Tri-party agreement.docx  0310833701_Tri-party agreement.docx  0310833704_Tri-party agreement.docx  0310833793_TL.docx  (+270 more)
backend/: .env  .env.example  AVAILABLE_VALUE_CENTRALIZATION.md  CELERY_SETUP.md  CENTRALIZATION_ANALYSIS.md  CHANGELOG_REPORTS.md  COMMAND  DATABASE_SYNC_GUIDE.md  Dockerfile.dev  EXPIRING_LICENSES_REPORT.md  INVENTORY_BALANCE_REPORT.md  INVENTORY_REPORT_SUMMARY.md  REPORTS_QUICK_START.md  TEST_INVENTORY_REPORT.md  check_and_fix_schema.sh  check_field_usage.py  conftest_managed.py  debug_balance.py  django_migrations_backup.json  local-dev.sqlite3  manage.py  my_items.csv  pyproject.toml  pytest.ini  requirements.txt  requirements_python314.txt  schema.json  sync-media.sh  test_balance_calc.py  test_crud_balance_updates.py
mds-client/: .gitignore  (+4 more)
(+2311 files in other folders)
